feat&fix: Add video section functionality and Uniformly change the path parameter to the query parameter
